# MS_KUKA_LWR

./: .gitignore  CMakeLists.txt  README.md  controllers.m
LAB_data/10_26/DAR/: Plots.m  Q.txt  dQ.txt
LAB_data/10_26/PD/: Q.txt  dQ.txt
LAB_data/10_27/DAR/: Q.txt  dQ.txt  dQ_hat.txt
LAB_data/10_27/PD/: Q.txt  dQ.txt  dQ_hat.txt
LAB_data/11_14/: Q.txt  dQ.txt  dQ_hat.txt  plots.m
LAB_data/11_22/: plots.m
LAB_data/11_22/mass_1_kg/: dQ.txt  error.txt  plots.m
LAB_data/11_22/mass_2_kg/: dQ.txt  error.txt  plots.m
LAB_data/11_22/no_mass/: dQ.txt  error.txt
LAB_data/11_22/old_data/: dQ.txt  error.txt
LAB_data/11_3/uncertain_mass/DAR/: Q.txt  dQ.txt  dQ_hat.txt
LAB_data/11_3/uncertain_mass/PD/: Q.txt  dQ.txt  dQ_hat.txt
LAB_data/11_8/: dQ.txt  dQ_hat.txt  plots.m
LAB_data/comp/: control.eps  err_mathced.eps  error.eps  plots_comp.m  pos_mathced.eps  u_mathced.eps
LAB_data/comp/DAR/: control_DAR.eps  control_DAR.txt  dQ.txt  error.txt  error_DAR.eps  eta_DAR.eps  plots.m  pos_DAR.eps  vel_DAR.eps
LAB_data/comp/FBL/1_Kg/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/comp/FBL/2_Kg/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/comp/FBL/no_mass/: control_FBL.eps  dQ.txt  dQ_hat.txt  error.txt  error_FBL.eps  plots.m  pos_FBL.eps  vel_FBL.eps
LAB_data/comp/SMC/1_Kg/: dQ.txt  dQ_hat.txt  error.txt  plots.m
LAB_data/comp/SMC/2_Kg/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/comp/SMC/no_mass/: control_SMC.eps  dQ.txt  dQ_hat.txt  error.txt  error_SMC.eps  plots.m  pos_SMC.eps  vel_SMC.eps
LAB_data/comparison/: main_DAR.cpp
LAB_data/comparison/DAR/1_Kg/: dQ.txt  error.txt
LAB_data/comparison/DAR/2_Kg/: dQ.txt
LAB_data/comparison/DAR/no_mass/: dQ_filtered.txt
LAB_data/comparison/FBL/1_Kg/: dQ.txt  error.txt
LAB_data/comparison/FBL/2_Kg/: dQ.txt  error.txt
LAB_data/comparison/FBL/no_mass/: dQ.txt
LAB_data/comparison/SMC/1_Kg/: control.txt  dQ_filtered.txt  plots.m
LAB_data/comparison/SMC/2_Kg/: dQ.txt  error.txt  plots.m
LAB_data/comparison/SMC/no_mass/: dQ.txt  error.txt  plots.m
LAB_data/dampling_traj/: dQ.txt  error.txt  plots.m
LAB_data/final_experiments/: err_no_mathced.eps  error_comp_tau.eps  main_DAR.cpp  plots_comp_2kg.m  plots_comp_no_mass.m  plots_comp_tau.m  plots_comp_un.asv  plots_comp_un.m  pos_no_mathced.eps  u_no_mathced.eps
LAB_data/final_experiments/FBL_no_matched/2_kg/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/final_experiments/FBL_no_matched/no_mass/: dQ.txt  dQ_hat.txt  error.txt  plots.m
LAB_data/final_experiments/SMC_no_matched/2_kg/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/final_experiments/SMC_no_matched/no_mass/: control.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/final_experiments/tau=2/2_kg/: control_DAR.txt  dQ.txt  error.txt
LAB_data/final_experiments/tau=2/no_mass/: control_DAR.txt  error.txt
LAB_data/final_experiments/tau=4/: control_DAR.txt  dQ.txt  error.txt  plots.m
LAB_data/new_exp/: plots_comp.m
LAB_data/new_exp/tau=4/2kg_matched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/tau=4/2kg_unmatched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/tau=4/no_mass_matched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/tau=4/no_mass_unmatched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/DAR_matched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/DAR_unmatched/: control_DAR.txt  dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/FBL_matched/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/FBL_unmatched/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/SMC_matched/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/new_exp/wrong_model/SMC_unmatched/: dQ.txt  dQ_hat.txt  error.txt
LAB_data/old_comp/DAR/2_Kg/: error.txt  plots.m
LAB_data/old_comp/DAR/no_mass/: control_DAR.eps  dQ.txt  error.txt  error_DAR.eps  eta_DAR.eps  plots.m  pos_DAR.eps  vel_DAR.eps
LAB_data/old_comp/FBL/1_Kg/: plots.m
LAB_data/old_comp/FBL/no_mass/: error.txt
LAB_data/old_comp/SMC/1_Kg/: dQref.txt  plots.m
LAB_data/old_comp/SMC/no_mass/: dQ_filtered.txt  plots.m
LAB_data/simple_output_regulation/: dQ.txt  error.txt  plots.asv  plots.m
MATLAB_Simulator/: DAR_parameters.m  LWR_DAR.m  LWR_sim_lorenzo.m  Lorenzo_parameters.m  Q.txt  general_plots.m  prova.m  robot_plot.m
MATLAB_Simulator/2R_Dynamics/: coriolis.m  gravity.m  inertia.m  sys_2R.m  sys_PD.asv  sys_PD.m
MATLAB_Simulator/Kinematics/: DH.m  Jacobian_LWR.mat  T_matrix.mat  cartesian_traj.m  dJacobian_LWR.mat  jacobian_kuka_lwr.mat  main_J_dJ.m  p6.mat  p_fifth_joint.m  p_fifth_joint.mat  p_fourth_joint.m  p_fourth_joint.mat  p_second_joint.mat  p_sixth_joint.m  p_third_joint.m  p_third_joint.mat  test_claudio.m  traj_manipulability.m
MATLAB_Simulator/Lorenzo_functions/: discrete_res.m  dynamics.m  fault_control.m  obs_dynamics.m
include/controller/: controller.hpp  controller_kuka.hpp  kuka_utilities.h
include/learning/: learning.hpp
include/limbo/kernel/: squared_exp_ard.hpp
include/limbo/model/: multi_gp.hpp  sparsified_gp_TOCHECK.hpp
include/limbo/tools/: random_generator.hpp
include/utils/: data_utils.hpp  lib.hpp
src/: gp.cpp  main_DAR.cpp  main_DAR_circ.cpp  main_DAR_circ2.cpp  main_FBL_PD.cpp  main_PD.cpp  main_SMC.cpp  main_old.cpp  main_pos.cpp  main_pos_full_observer.cpp  main_pos_reduced_observer.cpp  main_sim.cpp  main_sim_DAR.cpp  main_sim_noise.cpp  nn_test.cpp
src/controller/: controller.cpp  controller_kuka.cpp  kuka_utilities.cpp
src/learning/: learning.cpp
src/utils/: data_utils.cpp
